Use box shadow to avoid overlap on sides

--- a/addon/styles/_frost-list-item-container.scss
+++ b/addon/styles/_frost-list-item-container.scss
@@ -1,6 +1,6 @@
 .frost-list-item-container {
   margin: 1px;
-  outline: 1px solid $frost-color-lgrey-1;
+  box-shadow: 0 -1px 0 $frost-color-lgrey-1;
 
   &:hover {
     .frost-list-item-container-base,
